--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,15 @@
+/* Variables */
+:root {
+    --low-white: hsla(0, 0%, 90%, 0.5);
+    --off-white: hsla(0, 0%, 98%, 1);
+    --off-black: hsla(0, 0%, 10%, 1);
+    --blue-default: #282cfb;
+    --border-thick: 0.15rem;
+    /* --off-black: #121212; */
+}
+
+/* Core Html Section */
+
 html {
     font-size: 22px;
     font-family: 'Consolas', 'Andale Mono', sans-serif;
@@ -5,18 +17,21 @@ html {
 
 body {
     position: relative;
-    background-color: black;
+    background-color: var(--low-white);
     line-height: 1.5;
+    color: var(--off-black);
 }
 
 header {
-    background-color: beige;
+    background-color: hsla(0, 0%, 100%, 1);
     display: flex;
     justify-content: space-between;
     padding-top: 1.5rem;
     position: fixed;
     top: 0;
     width: 100%;
+    border-bottom: var(--border-thick) solid var(--blue-default);
+    box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.5);
 }
 
 nav {
@@ -33,10 +48,10 @@ nav ul li {
 }
 
 main {
-    padding-top: 6rem;
     width: 80%;
     margin: 0 auto;
-    background-color: white;
+    margin-top: 6rem;
+    background-color: hsla(0, 0%, 98%, 1);
     padding-bottom: 1rem;
 }
 
@@ -47,22 +62,47 @@ main>section {
 h1 {
     font-size: 2.75rem;
     padding: 0 3rem;
+    font-weight: bold;
 }
 
 h2 {
     font-size: 2rem;
     padding-left: 2rem;
     padding-bottom: 1.5rem;
+    font-weight: bold;
+    scroll-margin-top: 6rem;
 }
 
 h3 {
     font-size: 1.5rem;
+    padding-left: 4rem;
+    font-weight: bold;
+}
+
+h6 {
+    font-size: 0.75rem;
+    font-weight: bold;
 }
 
 footer {
-    background-color: beige;
+    text-align: center;
+    background-color: hsla(0, 0%, 100%, 1);
     padding: 2rem 0;
+    border-top: var(--border-thick) solid var(--blue-default);
 }
+
+/* Header Section */
+header h2 {
+    font-weight: normal;
+}
+
+.name-detail {
+    font-size: 2.2rem;
+    font-weight: bold;
+    color: var(--blue-default);
+}
+
+/* Hero Section */
 
 #hero {
     display: flex;
@@ -71,20 +111,45 @@ footer {
 }
 
 #hero img {
-    border-radius: 50%;
     max-width: 40%;
     min-width: 30%;
-    padding: 5%;
+    margin: 5%;
+    border: var(--border-thick) solid var(--blue-default);
+    border-radius: 50%;
 }
+
+/* About Me Section */
 
 #about-me p {
     padding: 0 10%;
+    margin: 1rem 0;
 }
+
+/* Knowledges Section */
+
+.sub-section ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.sub-section ul li {
+    text-align: center;
+    width: 12rem;
+    height: 12rem;
+    border: var(--border-thick) solid var(--blue-default);
+    border-radius: 5px;
+    margin: 2rem;
+    background-color: #fff;
+    font-weight: bold;
+}
+
+/* Technologies Section */
 
 #technologies ul {
     display: flex;
     flex-wrap: wrap;
-    padding: 0 25%;
+    padding: 0 15%;
     justify-content: center;
 }
 
