--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -71,6 +71,12 @@ main>section {
     margin: 2rem 0;
 }
 
+a {
+    text-decoration: none;
+    color: var(--blue-default);
+    font-weight: bold;
+}
+
 h1 {
     font-size: 2.75rem;
     padding: 0 3rem;
@@ -98,6 +104,10 @@ h4 {
 h6 {
     font-size: 0.75rem;
     font-weight: bold;
+}
+
+button:hover {
+    cursor: pointer;
 }
 
 footer {
@@ -154,8 +164,8 @@ button {
 }
 
 #hero img {
-    max-width: 40%;
-    min-width: 30%;
+    max-width: 30%;
+    min-width: 25%;
     margin: 5%;
     border: var(--border-thick) solid var(--blue-default);
     border-radius: 50%;
@@ -250,4 +260,32 @@ button {
     text-align: center;
     margin-bottom: 2rem;
     font-weight: bold;
+}
+
+/* Contact Page */
+/* Contact Section */
+#contact-section {
+    display: flex;
+    flex-direction: column;
+}
+
+#contact-section p {
+    max-width: 75%;
+    margin: 0 auto;
+}
+
+#header-right nav {
+    justify-self: last baseline;
+    align-self: last baseline;
+}
+
+#email-span {
+    display: inline-block;
+    color: var(--blue-default);
+    background-color: var(--low-white);
+    padding: 2rem;
+    border-radius: 5px;
+    margin: 2rem auto;
+    font-weight: bold;
+    box-shadow: 0 7px 7px -5px black;
 }
